--- a/lesson1/style.css
+++ b/lesson1/style.css
@@ -30,7 +30,7 @@
     background-color: #666;
 }
 
-.button {
+button {
     color: #fff;
     text-decoration: none;
     -webkit-user-select: none;
@@ -42,11 +42,11 @@
     outline: none;
 }
 
-.button:hover {
+button:hover {
     background: rgb(240,120,70);
 }
 
-.button:active {
+button:active {
     background: rgb(220,80,15);
 }
 
