--- a/lesson3/style.css
+++ b/lesson3/style.css
@@ -5,7 +5,10 @@ body {
 }
 
 .myForm {
-    width: 350px;
+    display: flex;
+    flex-direction: column;
+    align-items: flex-start;
+    width: 670px;
     height: auto;
     margin: 50px auto 0;
     padding: 50px;
@@ -15,9 +18,25 @@ body {
     border-radius: 40px 0 40px 0
 }
 
+.fieldGroup {
+    display: flex;
+    flex-wrap: wrap;
+    width: 100%;
+}
+
 .label {
+    width: 310px;
     font-size: 15px;
     font-weight: 700
+}
+
+.errorLabel {
+    margin: 10px 15px;
+    font-size: 12px;
+    color: #cc7a66;
+    /*width: 310px;*/
+    height: 30px;
+    line-height: 30px;
 }
 
 .field {
@@ -36,19 +55,36 @@ body {
 }
 
 .textarea {
-    height: inherit;
+    border: 1px solid #DADADA;
+    margin-top: 10px;
+    margin-bottom: 10px;
     padding: 15px;
+    width: 310px;
+    font-size: 14px;
+    box-shadow: 0 0 10px;
 }
 
 .button {
+    width: 344px;
     background-color:#cc7a66;
     border-radius:5px;
     border:none;
     padding:10px 25px;
     color:#FFF;
     text-shadow:1px 1px 1px #949494;
-    margin-left:120px
 }
 .button:hover{
     background-color:#FF9980
+}
+
+.button:focus {
+    outline: none;
+}
+
+.error {
+    border: 1px solid red;
+}
+
+.hide {
+    display: none;
 }
