tabs html/css finished

--- a/lesson4/tabs/style.css
+++ b/lesson4/tabs/style.css
@@ -2,47 +2,67 @@
     padding: 0;
     margin: 0;
 }
-.wrapper {
-    margin: 0 auto;
-}
+
 .tab-wrap {
-    list-style-type: none;
     display: flex;
-    justify-content: space-around;
-    width: 600px;
-    height: 50px;
+    justify-content: flex-start;
+    list-style-type: none;
 }
-.text-content {
-    width: 600px;
-}
+
 .tab {
-    background-color: green;
-    width: 149px;
-    height: 100%;
-    color: #fff;
-    text-align: center;
-    font-size: 15px;
-    line-height: 50px;
+    padding: 15px 30px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    border: 1px solid green;
+    -webkit-border-radius: 5px 5px 0 0;
+    -moz-border-radius: 5px 5px 0 0;
+    border-radius: 5px 5px 0 0;
+    text-decoration: none;
+    -webkit-transition: all ease-in-out .4s;
+    -moz-transition: all ease-in-out .4s;
+    -ms-transition: all ease-in-out .4s;
+    -o-transition: all ease-in-out .4s;
+    transition: all ease-in-out .4s;
+    color: green;
 }
-.active {
-    background-color: #fff;
-    color: #000;
-    border-top: 2px solid green;
-    border-left: 2px solid green;
-    border-right: 2px solid green;
-    box-sizing: border-box;
+
+.vertical .tab {
+    -webkit-border-radius: 5px 0 0 5px;
+    -moz-border-radius: 5px 0 0 5px;
+    border-radius: 5px 0 0 5px;
 }
+
+.wrapper {
+    max-width: 700px;
+    padding: 30px;
+}
+
 .itemContent {
-    border-left: 2px solid green;
-    border-bottom: 2px solid green;
-    border-right: 2px solid green;
-    box-sizing: border-box;
-    padding: 5px;
+    display: none;
+    padding: 20px;
+    border: 1px solid green;
+    border-radius: 0 5px 5px 5px;
+    background: green;
+    color: white;
 }
-.show {
+
+.itemContent.active {
     display: block;
 }
 
-.hide {
-    display: none;
+.tab.active, .tab:hover {
+    background: green;
+    color: white;
+}
+
+.vertical {
+    display: flex;
+    flex-direction: column;
+}
+
+.vertical-wrap {
+    display: flex;
+    justify-content: space-around;
+    margin-top: 50px;
 }
